--- a/VKNewsFeed/VKNewsFeed/Newsfeed/Cell/NewsfeedCell.xib
+++ b/VKNewsFeed/VKNewsFeed/Newsfeed/Cell/NewsfeedCell.xib
@@ -8,19 +8,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="229" id="TGc-ou-q8C" customClass="NewsfeedCell" customModule="VKNewsFeed" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="230"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="210" id="TGc-ou-q8C" customClass="NewsfeedCell" customModule="VKNewsFeed" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TGc-ou-q8C" id="isz-97-tv8">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="230"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pEV-31-vPq" userLabel="CardView">
-                        <rect key="frame" x="8" y="8" width="358" height="214"/>
+                        <rect key="frame" x="8" y="0.0" width="359" height="200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hSG-Qk-Cpv" userLabel="TopView">
-                                <rect key="frame" x="6" y="7" width="346" height="40"/>
+                                <rect key="frame" x="6" y="7" width="347" height="40"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6wh-Ug-rIk" customClass="WebImageView" customModule="VKNewsFeed" customModuleProvider="target">
@@ -29,14 +29,14 @@
                                         <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NHK-Yv-00v">
-                                        <rect key="frame" x="48" y="20" width="290" height="15"/>
+                                        <rect key="frame" x="48" y="20" width="291" height="15"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.50588235294117645" green="0.5490196078431373" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n6c-8c-fRJ">
-                                        <rect key="frame" x="48" y="2" width="290" height="15"/>
+                                        <rect key="frame" x="48" y="2" width="291" height="15"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                         <color key="textColor" red="0.39198106529999999" green="0.39597308640000001" blue="0.40423351530000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -45,14 +45,14 @@
                                 </subviews>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b2O-ON-PgA">
-                                <rect key="frame" x="6" y="55" width="346" height="53"/>
+                                <rect key="frame" x="8" y="52" width="343" height="53"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yqp-nJ-oAe" userLabel="BottomView">
-                                <rect key="frame" x="0.0" y="170" width="358" height="44"/>
+                                <rect key="frame" x="0.0" y="156" width="359" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vcg-GQ-TAZ">
@@ -110,7 +110,7 @@
                                         </subviews>
                                     </view>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pmj-Xm-Ocv">
-                                        <rect key="frame" x="278" y="0.0" width="80" height="44"/>
+                                        <rect key="frame" x="279" y="0.0" width="80" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="eye" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ugz-d4-2gb">
@@ -130,7 +130,7 @@
                                 </subviews>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FGX-K4-nQt" customClass="WebImageView" customModule="VKNewsFeed" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="116" width="358" height="55"/>
+                                <rect key="frame" x="1" y="108" width="358" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -139,6 +139,7 @@
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="bottomView" destination="Yqp-nJ-oAe" id="fk2-g8-JDy"/>
                 <outlet property="cardView" destination="pEV-31-vPq" id="bAO-dw-kh3"/>
                 <outlet property="commentsLabel" destination="DcX-Yc-91j" id="mdG-FJ-cAo"/>
                 <outlet property="dateLabel" destination="NHK-Yv-00v" id="0CF-QA-BX4"/>
@@ -150,7 +151,7 @@
                 <outlet property="sharesLabel" destination="Goe-6l-a5i" id="POe-mH-2cM"/>
                 <outlet property="viewsLabel" destination="Ato-Ds-vF3" id="XXf-nt-aDC"/>
             </connections>
-            <point key="canvasLocation" x="-1012" y="98"/>
+            <point key="canvasLocation" x="-1444" y="100"/>
         </tableViewCell>
     </objects>
     <resources>
