--- a/VKNewsFeed/VKNewsFeed/Newsfeed/Cell/NewsfeedCell.xib
+++ b/VKNewsFeed/VKNewsFeed/Newsfeed/Cell/NewsfeedCell.xib
@@ -141,7 +141,7 @@
             <connections>
                 <outlet property="bottomView" destination="Yqp-nJ-oAe" id="fk2-g8-JDy"/>
                 <outlet property="cardView" destination="pEV-31-vPq" id="bAO-dw-kh3"/>
-                <outlet property="commentsLabel" destination="DcX-Yc-91j" id="mdG-FJ-cAo"/>
+                <outlet property="commentsLabel" destination="DcX-Yc-91j" id="z0i-Ru-7aw"/>
                 <outlet property="dateLabel" destination="NHK-Yv-00v" id="0CF-QA-BX4"/>
                 <outlet property="iconImageView" destination="6wh-Ug-rIk" id="emg-CG-mBd"/>
                 <outlet property="likesLabel" destination="4dS-G0-u2h" id="6hQ-eB-VCk"/>
@@ -151,7 +151,7 @@
                 <outlet property="sharesLabel" destination="Goe-6l-a5i" id="POe-mH-2cM"/>
                 <outlet property="viewsLabel" destination="Ato-Ds-vF3" id="XXf-nt-aDC"/>
             </connections>
-            <point key="canvasLocation" x="-1376" y="-160"/>
+            <point key="canvasLocation" x="-1579" y="-160"/>
         </tableViewCell>
     </objects>
     <resources>
